--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
     <style>
         body {
             background-image: url('static/images/17973908.jpg'); /* Replace with your desired background image */
-            background-size: cover;
+            background-size: auto;
             background-position: center;
             background-repeat: no-repeat;
         }
@@ -19,6 +19,11 @@
             border-radius: 10px;
             padding: 30px;
             box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+        }
+        .logo {
+            max-width: 200px; /* Adjust size as needed */
+            margin: 20px auto;
+            display: block;
         }
         .desk {
             margin: 20px;
@@ -52,14 +57,21 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="text-center mb-4">Choose Your Desk</h1>
+        <!-- Logo Section -->
+        <img src="static/images/NIT_logo.png" alt="Logo" class="logo"> <!-- Replace with your logo file name -->
+
+        <h1 class="text-center mb-4">Titulo</h1>
+
+        <!-- Introductory Text -->
+        <p class="text-center">Texto introdutorio</p>
+
         <div class="row justify-content-center">
             {% for desk_name, desk_info in desks.items() %}
             <div class="col-md-4 desk p-3">
                 <img src="{{ desk_info.image }}" alt="{{ desk_name }} Image">
                 <h3>{{ desk_name }}</h3>
-                <p>Select this desk for support and resources related to {{ desk_name | lower }}.</p>
-                <a class="btn btn-primary btn-lg" href="{{ desk_info.url }}">Go to {{ desk_name }}</a>
+                <p>Descricao {{ desk_name | lower }}.</p>
+                <a class="btn btn-primary btn-lg" href="{{ desk_info.url }}" target="_blank">Ir para {{ desk_name }}</a>            
             </div>
             {% endfor %}
         </div>
