--- a/templates/index.html
+++ b/templates/index.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>System Deck</title>
+    <title>Sistema de Plataformas</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/index.css')}}">
     <style>
         body {
             background-image: url('static/images/17973908.jpg'); /* Replace with your desired background image */
@@ -13,54 +14,15 @@
             background-position: center;
             background-repeat: no-repeat;
         }
-        .container {
-            margin-top: 50px;
-            background-color: rgba(255, 255, 255, 0.8);
-            border-radius: 10px;
-            padding: 30px;
-            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
-        }
-        .logo {
-            max-width: 200px; /* Adjust size as needed */
-            margin: 20px auto;
-            display: block;
-        }
-        .desk {
-            margin: 20px;
-            text-align: center;
-            border: 1px solid #dee2e6;
-            border-radius: 10px;
-            background-color: white;
-            transition: transform 0.2s;
-        }
-        .desk:hover {
-            transform: scale(1.05);
-        }
-        .desk img {
-            width: 350px;
-            height: 150px;
-            object-fit: cover;
-            border-radius: 10px 10px 0 0;
-        }
-        .desk h3 {
-            font-size: 1.5rem;
-            margin: 15px 0;
-        }
-        .desk p {
-            font-size: 1rem;
-            color: #6c757d;
-        }
-        .btn {
-            margin-bottom: 15px;
-        }
     </style>
+
 </head>
 <body>
     <div class="container">
         <!-- Logo Section -->
         <img src="static/images/NIT_logo.png" alt="Logo" class="logo"> <!-- Replace with your logo file name -->
 
-        <h1 class="text-center mb-4">Sistema de Plataformas NIT</h1>
+        <h1 class="text-center mb-4">Sistema de Plataformas</h1>
 
         <!-- Introductory Text 
         <p class="text-center">Texto introdutorio</p>
@@ -75,7 +37,13 @@
             </div>
             {% endfor %}
         </div>
+
     </div>
+    <!-- Footer -->
+    <footer class="bg-dark text-white text-center py-3 mt-4">
+        <p>&copy; {{ current_year }} SRECD - NIT | 2024 </p>
+    </footer>
+
     
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
